Bug 394510 - Clone layer with animation has grave visual bugs and does not work well
Summary: Clone layer with animation has grave visual bugs and does not work well
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 4.0.3
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-21 08:55 UTC by Bollebib
Modified: 2018-07-01 12:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bollebib 2018-05-21 08:55:37 UTC
Make a clone layer of an animation

move the clone layer

->the frames will be shown broken and with lots of visual artefacs
Comment 1 Dmitry Kazakov 2018-06-21 10:06:26 UTC
Git commit b52918c1a2c7aff72889c5f26d9d67de57b50fcd by Dmitry Kazakov.
Committed on 21/06/2018 at 10:04.
Pushed by dkazakov into branch 'master'.

Correctly invalidate frames when moving a Clone Layer

When moving a clone layer we should also reset all the frames, because
it doesn't have any animation channels.

M  +3    -8    libs/image/kis_image_animation_interface.cpp
M  +52   -8    libs/image/kis_time_range.cpp
M  +2    -0    libs/image/kis_time_range.h

https://commits.kde.org/krita/b52918c1a2c7aff72889c5f26d9d67de57b50fcd
Comment 2 Halla Rempt 2018-06-25 07:58:30 UTC
Git commit 6c23ac4cc54cd347ae1fea7c53061b0c91f1beb0 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 25/06/2018 at 07:57.
Pushed by rempt into branch 'krita/4.1'.

Correctly invalidate frames when moving a Clone Layer

When moving a clone layer we should also reset all the frames, because
it doesn't have any animation channels.

M  +3    -8    libs/image/kis_image_animation_interface.cpp
M  +52   -8    libs/image/kis_time_range.cpp
M  +2    -0    libs/image/kis_time_range.h

https://commits.kde.org/krita/6c23ac4cc54cd347ae1fea7c53061b0c91f1beb0
Comment 3 Andrey 2018-06-26 15:09:33 UTC
Git commit 19564a59dd9d8b8ed8060fb7161c1ae55d2eb93c by Andrey Kamakin, on behalf of Dmitry Kazakov.
Committed on 26/06/2018 at 14:18.
Pushed by akamakin into branch 'akamakin/T8628-multithreading-optimization'.

Correctly invalidate frames when moving a Clone Layer

When moving a clone layer we should also reset all the frames, because
it doesn't have any animation channels.

M  +3    -8    libs/image/kis_image_animation_interface.cpp
M  +52   -8    libs/image/kis_time_range.cpp
M  +2    -0    libs/image/kis_time_range.h

https://commits.kde.org/krita/19564a59dd9d8b8ed8060fb7161c1ae55d2eb93c
Comment 4 Bollebib 2018-07-01 12:56:34 UTC
Did you just remove it?


I kinda hoped clone layers would work for this ,it would save time