Correctly invalidate frames when moving a Clone Layer

When moving a clone layer we should also reset all the frames, because
it doesn't have any animation channels.

BUG:394510